@@ -26,6 +26,7 @@ GBAApp::GBAApp(int& argc, char* argv[])
 #endif
 
 	SocketSubsystemInit();
+	qRegisterMetaType<const uint32_t*>("const uint32_t*");
 
 	QApplication::setApplicationName(PROJECT_NAME);
 	QApplication::setApplicationVersion(PROJECT_VERSION);
